changes to properties

--- a/swift-cloud-tutorial/part04/swift.properties
+++ b/swift-cloud-tutorial/part04/swift.properties
@@ -13,9 +13,35 @@ site.cloud {
    taskWalltime=04:00:00
    initialScore=10000
    filesystem=local
-   jobmanager=coaster-persistent:local:local:http://localhost:50010
+   jobmanager=coaster-persistent:local:local:http://130.211.176.225:50010                                                                                                                                   
    workerManager=passive
    taskThrottle=800
-   workdir=/home/yadu/work
+   workdir=/home/sophiayang/work
 }
 
+site.midway-westmere {
+   jobManager=midway.rcc.uchicago.edu:slurm
+   jobQueue=westmere
+   tasksPerWorker=12
+   initialScore=10000
+   filesystem=local
+   jobproject=pi-wilde
+   workdir=/scratch/midway/sophiayang/work
+}
+
+site.beagle {
+   jobManager=login4.beagle.ci.uchicago.edu:pbs
+   jobQueue=batch
+   tasksPerWorker=24
+   providerAttributes=pbs.aprun;pbs.mpp;depth=24
+   initialScore=10000
+   filesystem=local
+ #  jobproject=CI-CCR000013                                                                                                                                                                                 
+   jobWalltime=00:10:00
+   taskWalltime=00:02:00
+   userHomeOverride=/lustre/beagle/sophiayang
+   workDir=/lustre/beagle/sophiayang
+}
+
+#app.local.stats=$PWD/stats.sh
+#app.midway.bash=/bin/bash
