changes to properties

--- a/swift-cloud-tutorial/part04/swift.properties
+++ b/swift-cloud-tutorial/part04/swift.properties
@@ -19,7 +19,7 @@ site.cloud {
    workdir=/home/sophiayang/work
 }
 
-site.midway-westmere {
+site.midway-remote {
    jobManager=midway.rcc.uchicago.edu:slurm
    jobQueue=westmere
    tasksPerWorker=12
