add midway local

--- a/swift-cloud-tutorial/part04/swift.properties
+++ b/swift-cloud-tutorial/part04/swift.properties
@@ -19,6 +19,16 @@ site.cloud {
    workdir=/home/sophiayang/work
 }
 
+site.midway-local {
+   jobManager=slurm
+   jobQueue=westmere
+   tasksPerWorker=4
+   initialScore=10000
+   filesystem=local
+   jobproject=pi-wilde
+   workdir=/scratch/midway/sophiayang/work
+}
+
 site.midway-remote {
    jobManager=midway.rcc.uchicago.edu:slurm
    jobQueue=westmere
