change beagle to remote

--- a/swift-cloud-tutorial/part04/swift.properties
+++ b/swift-cloud-tutorial/part04/swift.properties
@@ -39,7 +39,7 @@ site.midway-remote {
    workdir=/scratch/midway/sophiayang/work
 }
 
-site.beagle {
+site.beagle-remote {
    jobManager=login4.beagle.ci.uchicago.edu:pbs
    jobQueue=batch
    tasksPerWorker=24
