--- a/swift-cloud-tutorial/part04/swift.properties
+++ b/swift-cloud-tutorial/part04/swift.properties
@@ -53,5 +53,25 @@ site.beagle-remote {
    workDir=/lustre/beagle/sophiayang
 }
 
+site.osgconnect {
+   jobManager=condor
+   initialScore=10000
+   tasksPerWorker=1
+   jobGranularity=1
+   jobType=nonshared
+   condor.+ProjectName=Swift
+   workdir=.
+}
+
+site.osgconnect-ssh {
+   jobManager=login.osgconnect.net:condor
+   initialScore=10000
+   tasksPerWorker=1
+   jobGranularity=1
+   jobType=nonshared
+   condor.+ProjectName=Swift
+   workdir=.
+}
+
 #app.local.stats=$PWD/stats.sh
 #app.midway.bash=/bin/bash
