--- a/swift-cloud-tutorial/part04/swift.properties
+++ b/swift-cloud-tutorial/part04/swift.properties
@@ -63,7 +63,7 @@ site.osgconnect {
    workdir=.
 }
 
-site.osgconnect-ssh {
+site.osgconnect-remote {
    jobManager=login.osgconnect.net:condor
    initialScore=10000
    tasksPerWorker=1
