--- a/swift-cloud-tutorial/part04/swift.properties
+++ b/swift-cloud-tutorial/part04/swift.properties
@@ -41,12 +41,12 @@ site.midway-remote {
 
 site.beagle-remote {
    jobManager=login4.beagle.ci.uchicago.edu:pbs
-   jobQueue=batch
+   jobQueue=development
    tasksPerWorker=24
    providerAttributes=pbs.aprun;pbs.mpp;depth=24
    initialScore=10000
    filesystem=local
- #  jobproject=CI-CCR000013                                                                                                                                                                                 
+   jobproject=CI-CCR000013                                                                                                                                                                                 
    jobWalltime=00:10:00
    taskWalltime=00:02:00
    userHomeOverride=/lustre/beagle/sophiayang
