--- a/swift-cloud-tutorial/part04/swift.properties
+++ b/swift-cloud-tutorial/part04/swift.properties
@@ -19,7 +19,7 @@ site.cloud {
    workdir=/home/sophiayang/work
 }
 
-site.midway-compute {
+site.midway {
    jobManager=slurm
    jobQueue=westmere
    tasksPerWorker=4
